[package]
name = "bellatrix_ui"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
eframe = {version = "0.17.0", features = ["persistence"]}

serde = { version = "1.0.130", features = ["derive"] }

chrono = "0.4.19"
# para que la aplicacion tenga un archivo de configuracion
# NOTE(elsuizo:2022-04-05): cuando querramos hacer que la aplicacion pueda cargar
# varias configuraciones o dependiendo del usuario(segun su `wallet_address`)
# tenemos que usar la version `master` porque es la que nos permite eso
# confy = "0.4.0"
confy = {git = "https://github.com/rust-cli/confy"}

# web3_rust_wrapper = "0.2.1"
# web3_rust_wrapper = {version = "0.2.1", path = "../web3helper"}
# NOTE(elsuizo:2022-03-15): hago que apunte al repo con el branch en el que
# estoy probando cosas
web3_rust_wrapper = {git = "https://github.com/Nikola43/web3helper.git", branch = "suizo-refactor"}
dotenv = "0.15.0"
# async-std = {version = "1.10.0", features = ["unstable"]}

async-std = { version = "1.10.0", features = ["tokio1"] }

[features]
default = []
